--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'California -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: A Daughter of the Vine
 url: http://www.gutenberg.org/ebooks/35512
